# xml_editor

./: CMakeLists.txt  LICENSE  README.md
src/: XmlModel.cpp  XmlModel.h  main.cpp
src/qml/: MyMenuBar.qml  XmlView.qml  mainwindow.qml
test/data/: test.xml
